apps/adsb/metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adsb-exporter
  labels:
    app: adsb-exporter
spec:
  type: ClusterIP
  selector:
    app: adsb-exporter
  ports:
    - name: metrics
      port: 9105
      targetPort: 9105
